# LearnVideo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ffmpegTester.cpp  video.flv
LearnWebRtc/: audio.html  video.html
LearnWebRtc/multiple/client/: client.html
LearnWebRtc/multiple/client/js/: client.js
LearnWebRtc/multiple/server/: package-lock.json  server.js
README/: video_mp4_hex.txt  video_mp4_mediainfo.txt
src/: 07-08-demuxer-mp4.c  07-09-avio.c  demux-decode.c  encode-video.c  encode_pcm_aac.c  ffmpegTester.cpp  mux.c  parse_pcm.cpp  parse_yuv420p.cpp  resample_audio.c  scaler.c  sdl-01.cpp
src/mp4Muxer/include/: audioEncoder.h  muxer.h  resampler.h  videoEncoder.h
src/mp4Muxer/src/: audioEncoder.cpp  main.cpp  muxer.cpp  videoEncoder.cpp
